# r-note

./: .env  Cargo.toml  LICENSE  README.md
r-note-lib/: Cargo.toml
r-note-lib/src/: lib.rs
src/: main.rs
